<resources>
    <string name="app_name">IOTAndroid Jaledaor</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="Ingreso">Click en Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="registro">Registrando</string>
    <string name="mensaje_1">Click en Ingreso</string>
    <string name="tieneUsuario">Tienes Usuario</string>
    <string name="email">Correo Electronico</string>
</resources>
