<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="co.edu.ucc.jaledaor_iotandroid.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:src="@drawable/the_punisher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_nomCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre_completo"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrar"
                android:textColor="@color/blanco"
                android:textStyle="bold|italic"/>


        </LinearLayout>
    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tieneUsuario"
    android:textColor="@color/gris"
    android:textStyle="bold|italic"
    android:clickable="true"
    android:textSize="18sp"
    android:contextClickable="true"
    android:layout_gravity="bottom|center"/>

</FrameLayout>
